Fix footer position on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -120,8 +120,9 @@ section {
 }
 
 #footer {
+    display: block;
     position: absolute;
-    top: 313%;
+    top: 100%;
     height: 8em;
     width: 100%;
     z-index: 100000000;
@@ -449,4 +450,15 @@ span {
     .faqGrid {
         grid-template-columns: repeat(1, 1fr);
     }
+    #ticketsBtn {
+        width: 4.5em;
+        height: 1.85em;
+        right: 1em;
+        top: 1.575em;
+    }
+    /* #footer {
+        position: absolute;
+
+        top: 5000px;
+    } */
 }
